# itsec1-bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.streamlit/: config.toml
app/: main.py  test.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
docker/app/: Dockerfile  Dockerfile.backup  pyproject.toml
docker/itsec1_bot/: Dockerfile
docker/langflow/: Dockerfile
docker/ollama/: Dockerfile  Modelfile  entrypoint.sh
docker/openllm/: Dockerfile
itsec1_app/: main.py
itsec1_app/components/: sidebar.py
