[tool.poetry]
name = "itsec1-bot"
version = "0.1.0"
description = "A bot assisting studens"
authors = ["Philip Empl"]
license = "MIT"
readme = "README.md"
packages = [{include = "itsec1-bot"}]


[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.278"
streamlit = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
