[tool.poetry]
name = "Lecture Bot"
version = "0.1.0"
description = "A bot assisting students."
authors = ["Philip Empl"]
license = "MIT"
readme = "README.md"
packages = [{include = "lecture-bot"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.281"
openai = "^0.28.0"
streamlit = "^1.26.0"
pypdf = "^3.15.5"
chromadb = "^0.3.29" 
tiktoken = "^0.4.0"
unstructured = { version = "^0.10.12", extras = ["pdf"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
